--- a/resources/assets/dsc/lang/en_US.lang
+++ b/resources/assets/dsc/lang/en_US.lang
@@ -13,6 +13,7 @@ version.dsc:outdated=A new version exists (%s) for %s. Get it here: %s
 version.dsc:error_connect=Error while connecting to remote version authority file
 version.dsc:error_attempt=Version check stopping after %d unsuccessful attempts
 version.dsc:error_mc=Unable to find a version of %s for %s in remote version authority
+version.dsc:error_xml=Could not extract entry from file
 version.dsc:error_url=Could not reach URL at %s
 
 #Configuration error message localizations
