--- a/src/main/resources/assets/dsc/lang/en_US.lang
+++ b/src/main/resources/assets/dsc/lang/en_US.lang
@@ -6,6 +6,7 @@ item.weapon.dsc:banditsknife.name=Bandit's Knife
 item.weapon.dsc:battleaxe.name=Battle Axe
 item.weapon.dsc:dagger.name=Dagger
 item.weapon.dsc:halberd.name=Halberd
+item.weapon.dsc:handaxe.name=Hand Axe
 item.weapon.dsc:longsword.name=Longsword
 item.weapon.dsc:lucerne.name=Lucerne
 item.weapon.dsc:shortsword.name=Shortsword
