--- a/src/main/resources/assets/dsc/lang/en_US.lang
+++ b/src/main/resources/assets/dsc/lang/en_US.lang
@@ -8,6 +8,7 @@ item.weapon.dsc:club.name=Club
 item.weapon.dsc:dagger.name=Dagger
 item.weapon.dsc:halberd.name=Halberd
 item.weapon.dsc:handaxe.name=Hand Axe
+item.weapon.dsc:mace.name=Mace
 item.weapon.dsc:longsword.name=Longsword
 item.weapon.dsc:lucerne.name=Lucerne
 item.weapon.dsc:shortsword.name=Shortsword
